<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Naval Battle</string>
    <string name="profiles">Profiles</string>
    <string name="new_game">New Game</string>
    <string name="offline">Offline</string>
    <string name="online">With Friends</string>
    <string name="title_activity_new_game">newGameActivity</string>
    <string name="title_activity_set_positions">SetPositionsActivity</string>
    <string name="header_set_positions">Choose your positions.</string>
    <string name="start_game">Start Game</string>
    <string name="next_turn">Next Turn</string>

    <string name="invalid_positions">Exist invalid positions.</string>

    <string name="end_game">End of the Game.</string>
    <string name="won_a">Team A won!!!</string>
    <string name="won_b">Team B won!!!</string>
    <string name="choose_new_position">You hitted 3 positions. You may choose new position on a ship.</string>
    <string name="title_activity_server_or_client">ServerOrClientActivity</string>

    <string name="server">Create Game</string>
    <string name="client">Connect Game</string>
    <string name="error_netconn">No network connection.</string>
    <string name="serverdlg_msg">Waiting for a someone...</string>
    <string name="serverdlg_title">NavalBatle Online</string>
    <string name="game_finished">The game was finished. The game will continue versus smartphone.</string>
    <string name="title_activity_profiles_list">Profiles List</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_profile_title">Delete Profile</string>
    <string name="title_activity_new_profile">new_profile</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="name">Name</string>
    <string name="required">Required</string>
    <string name="create_profile">Create Profile</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="waiting_other_player">Wainting for the other player...</string>
    <string name="ai_fired_positions">Smartphone fired positions</string>
    <string name="use_profile">Use profile</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="history_not_found">History not found</string>
    <string name="delete_profile_message">Delete profile</string>
    <string name="details_profile">Details</string>
    <string name="choose_create_profile">First need to choose / create a profile.</string>
    <string name="client_dlg_text">Write the IP of the other player.</string>
    <string name="client_dlg_title">Connect Game</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="credits_title">Mobile Applications</string>
    <string name="credits_teacher">Teacher: Álvaro Santos</string>
    <string name="credits_institute">Institute of Engineering of Coimbra</string>
    <string name="ai_setted_positions">AI positioned the ships</string>
    <string name="capture">CAPTURE</string>
    <string name="fire_3_positions">Need to Fire 3 positions</string>
    <string name="next_turn_ai_fired">AI Fired. Next Turn</string>


</resources>
