<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FBFC"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Profiles.NewProfileActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/ivPhoto"
        />
    <Button
        android:background="@null"
        android:textColor="#3D5A80"
        android:drawableRight="@drawable/camera"
        android:fontFamily="@font/mastodontus"
        android:textSize="20sp"

        android:id="@+id/btTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:text="@string/take_photo"
        android:onClick="onTakePhoto"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/mastodontus"
        android:textSize="20sp"

        android:text="@string/name"
        android:textColor="#000" />

    <EditText
        android:id="@+id/eName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvRequired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="#f00"
        android:visibility="invisible"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="textEnd"/>

    <Button
        android:background="@null"
        android:textColor="#3D5A80"
        android:fontFamily="@font/mastodontus"
        android:textSize="20sp"
        android:drawableRight="@drawable/createprofile"

        android:id="@+id/btCriarNovoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/create_profile"
        android:onClick="onCreateProfile"
        android:selectAllOnFocus="true" />
</LinearLayout>