<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.CreditsActivity"
    android:background="#E0FBFC"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/credits_title"
            android:gravity="center"
            android:textColor="#3D5A80"
            android:textSize="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/credits_teacher"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#3D5A80"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/credits_institute"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#3D5A80"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@drawable/select_user"
            android:layout_gravity="right|top"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Bruno Coelho"
            android:textSize="20dp"

            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:textColor="#3D5A80"/>
    </LinearLayout>

</LinearLayout>